@@ -1,3 +1,7 @@
+<h5>1.10 Final</h5> [2020/07/03]
+<hr>
+ - moved to final (goffy)
+ 
 <h5>1.10 RC1</h5> [2020/02/09]
 <hr>
  - added maintenance / cleaning unused images (goffy)
